# JazaSort

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  app.go  go.mod  go.sum  main.go  tauri.conf.json  wails.json
.github/workflows/: release.yml  test.yml
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
frontend/src/: App.tsx  style.css
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: index.ts
frontend/src/test/: setup.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
internal/cleaner/: cleaner.go  cleaner_test.go
internal/config/: config.go  config.json  parser.go  parser_test.go
internal/sorter/: sorter.go  sorter_test.go
internal/stats/: stats.go
src/: cleaner.rs  commands.rs  config.json  config.rs  main.rs  sorter.rs  stats.rs
