[package]
name = "jazasort"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
chrono = "0.4"
id3 = "1.14"
kamadak-exif = "0.5"
walkdir = "2.5"
lazy_static = "1.4"

[build-dependencies]
tauri-build = "2.0"

[dev-dependencies]
tempfile = "3.8"
